mod_gen/MOD_HTMLParser.py
# Generated from MOD_HTMLParser.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class MOD_HTMLParser ( Parser ):

    grammarFileName = "MOD_HTMLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'<'", "<INVALID>", "'>'", "'?>'", "'/>'", 
                     "'/'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "CDATA", "DTD", "XML_DeclOpen", 
                      "SCRIPT", "SCRIPT2", "STYLE", "STYLE2", "SCRIPTLET", 
                      "SCRIPTLET2", "SP_TEXT", "SEA_WS", "OPEN", "TEXT", 
                      "CLOSE", "SPECIAL_CLOSE", "SLASH_CLOSE", "SLASH", 
                      "TAG_EQUALS", "OPTName", "SName", "Name", "S", "ATTVALUE_VALUE", 
                      "ATTRIBUTE" ]

    RULE_document = 0
    RULE_xml = 1
    RULE_element = 2
    RULE_attribute = 3
    RULE_chardata = 4
    RULE_misc = 5
    RULE_scriptlet = 6
    RULE_xml_decl_open = 7

    ruleNames =  [ "document", "xml", "element", "attribute", "chardata", 
                   "misc", "scriptlet", "xml_decl_open" ]

    EOF = Token.EOF
    COMMENT=1
    CDATA=2
    DTD=3
    XML_DeclOpen=4
    SCRIPT=5
    SCRIPT2=6
    STYLE=7
    STYLE2=8
    SCRIPTLET=9
    SCRIPTLET2=10
    SP_TEXT=11
    SEA_WS=12
    OPEN=13
    TEXT=14
    CLOSE=15
    SPECIAL_CLOSE=16
    SLASH_CLOSE=17
    SLASH=18
    TAG_EQUALS=19
    OPTName=20
    SName=21
    Name=22
    S=23
    ATTVALUE_VALUE=24
    ATTRIBUTE=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DocumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def misc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOD_HTMLParser.MiscContext)
            else:
                return self.getTypedRuleContext(MOD_HTMLParser.MiscContext,i)


        def xml(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOD_HTMLParser.XmlContext)
            else:
                return self.getTypedRuleContext(MOD_HTMLParser.XmlContext,i)


        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOD_HTMLParser.ElementContext)
            else:
                return self.getTypedRuleContext(MOD_HTMLParser.ElementContext,i)


        def CDATA(self, i:int=None):
            if i is None:
                return self.getTokens(MOD_HTMLParser.CDATA)
            else:
                return self.getToken(MOD_HTMLParser.CDATA, i)

        def COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(MOD_HTMLParser.COMMENT)
            else:
                return self.getToken(MOD_HTMLParser.COMMENT, i)

        def chardata(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOD_HTMLParser.ChardataContext)
            else:
                return self.getTypedRuleContext(MOD_HTMLParser.ChardataContext,i)


        def getRuleIndex(self):
            return MOD_HTMLParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)




    def document(self):

        localctx = MOD_HTMLParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MOD_HTMLParser.COMMENT) | (1 << MOD_HTMLParser.CDATA) | (1 << MOD_HTMLParser.XML_DeclOpen) | (1 << MOD_HTMLParser.SP_TEXT) | (1 << MOD_HTMLParser.SEA_WS) | (1 << MOD_HTMLParser.OPEN) | (1 << MOD_HTMLParser.TEXT))) != 0):
                self.state = 22
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 16
                    self.misc()
                    pass

                elif la_ == 2:
                    self.state = 17
                    self.xml()
                    pass

                elif la_ == 3:
                    self.state = 18
                    self.element()
                    pass

                elif la_ == 4:
                    self.state = 19
                    self.match(MOD_HTMLParser.CDATA)
                    pass

                elif la_ == 5:
                    self.state = 20
                    self.match(MOD_HTMLParser.COMMENT)
                    pass

                elif la_ == 6:
                    self.state = 21
                    self.chardata()
                    pass


                self.state = 26
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class XmlContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def xml_decl_open(self):
            return self.getTypedRuleContext(MOD_HTMLParser.Xml_decl_openContext,0)


        def SPECIAL_CLOSE(self):
            return self.getToken(MOD_HTMLParser.SPECIAL_CLOSE, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOD_HTMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(MOD_HTMLParser.AttributeContext,i)


        def getRuleIndex(self):
            return MOD_HTMLParser.RULE_xml

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXml" ):
                listener.enterXml(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXml" ):
                listener.exitXml(self)




    def xml(self):

        localctx = MOD_HTMLParser.XmlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_xml)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.xml_decl_open()
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MOD_HTMLParser.Name:
                self.state = 28
                self.attribute()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(MOD_HTMLParser.SPECIAL_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MOD_HTMLParser.RULE_element

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Single_slash_tagContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOD_HTMLParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Name(self):
            return self.getToken(MOD_HTMLParser.Name, 0)
        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOD_HTMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(MOD_HTMLParser.AttributeContext,i)

        def S(self, i:int=None):
            if i is None:
                return self.getTokens(MOD_HTMLParser.S)
            else:
                return self.getToken(MOD_HTMLParser.S, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_slash_tag" ):
                listener.enterSingle_slash_tag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_slash_tag" ):
                listener.exitSingle_slash_tag(self)


    class Opening_tagContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOD_HTMLParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Name(self, i:int=None):
            if i is None:
                return self.getTokens(MOD_HTMLParser.Name)
            else:
                return self.getToken(MOD_HTMLParser.Name, i)
        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOD_HTMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(MOD_HTMLParser.AttributeContext,i)

        def S(self, i:int=None):
            if i is None:
                return self.getTokens(MOD_HTMLParser.S)
            else:
                return self.getToken(MOD_HTMLParser.S, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpening_tag" ):
                listener.enterOpening_tag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpening_tag" ):
                listener.exitOpening_tag(self)


    class Opt_closing_tagContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOD_HTMLParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPTName(self):
            return self.getToken(MOD_HTMLParser.OPTName, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpt_closing_tag" ):
                listener.enterOpt_closing_tag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpt_closing_tag" ):
                listener.exitOpt_closing_tag(self)


    class Opt_opening_tagContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOD_HTMLParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPTName(self):
            return self.getToken(MOD_HTMLParser.OPTName, 0)
        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOD_HTMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(MOD_HTMLParser.AttributeContext,i)

        def Name(self):
            return self.getToken(MOD_HTMLParser.Name, 0)
        def S(self, i:int=None):
            if i is None:
                return self.getTokens(MOD_HTMLParser.S)
            else:
                return self.getToken(MOD_HTMLParser.S, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpt_opening_tag" ):
                listener.enterOpt_opening_tag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpt_opening_tag" ):
                listener.exitOpt_opening_tag(self)


    class Single_tagContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOD_HTMLParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SName(self):
            return self.getToken(MOD_HTMLParser.SName, 0)
        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOD_HTMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(MOD_HTMLParser.AttributeContext,i)

        def Name(self):
            return self.getToken(MOD_HTMLParser.Name, 0)
        def S(self, i:int=None):
            if i is None:
                return self.getTokens(MOD_HTMLParser.S)
            else:
                return self.getToken(MOD_HTMLParser.S, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_tag" ):
                listener.enterSingle_tag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_tag" ):
                listener.exitSingle_tag(self)


    class Closing_tagContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOD_HTMLParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Name(self):
            return self.getToken(MOD_HTMLParser.Name, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClosing_tag" ):
                listener.enterClosing_tag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClosing_tag" ):
                listener.exitClosing_tag(self)



    def element(self):

        localctx = MOD_HTMLParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_element)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
            if la_ == 1:
                localctx = MOD_HTMLParser.Opt_opening_tagContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.match(MOD_HTMLParser.OPEN)
                self.state = 37
                self.match(MOD_HTMLParser.OPTName)
                self.state = 46
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 39 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 38
                            self.match(MOD_HTMLParser.S)
                            self.state = 41 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==MOD_HTMLParser.S):
                                break

                        self.state = 43
                        self.attribute() 
                    self.state = 48
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                self.state = 55
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 50 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 49
                        self.match(MOD_HTMLParser.S)
                        self.state = 52 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==MOD_HTMLParser.S):
                            break

                    self.state = 54
                    self.match(MOD_HTMLParser.Name)


                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MOD_HTMLParser.S:
                    self.state = 57
                    self.match(MOD_HTMLParser.S)
                    self.state = 62
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 63
                self.match(MOD_HTMLParser.CLOSE)
                pass

            elif la_ == 2:
                localctx = MOD_HTMLParser.Opt_closing_tagContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.match(MOD_HTMLParser.OPEN)
                self.state = 65
                self.match(MOD_HTMLParser.SLASH)
                self.state = 66
                self.match(MOD_HTMLParser.OPTName)
                self.state = 67
                self.match(MOD_HTMLParser.CLOSE)
                pass

            elif la_ == 3:
                localctx = MOD_HTMLParser.Opening_tagContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.match(MOD_HTMLParser.OPEN)
                self.state = 69
                self.match(MOD_HTMLParser.Name)
                self.state = 78
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 71 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 70
                            self.match(MOD_HTMLParser.S)
                            self.state = 73 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==MOD_HTMLParser.S):
                                break

                        self.state = 75
                        self.attribute() 
                    self.state = 80
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                self.state = 87
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 82 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 81
                        self.match(MOD_HTMLParser.S)
                        self.state = 84 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==MOD_HTMLParser.S):
                            break

                    self.state = 86
                    self.match(MOD_HTMLParser.Name)


                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MOD_HTMLParser.S:
                    self.state = 89
                    self.match(MOD_HTMLParser.S)
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 95
                self.match(MOD_HTMLParser.CLOSE)
                pass

            elif la_ == 4:
                localctx = MOD_HTMLParser.Closing_tagContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 96
                self.match(MOD_HTMLParser.OPEN)
                self.state = 97
                self.match(MOD_HTMLParser.SLASH)
                self.state = 98
                self.match(MOD_HTMLParser.Name)
                self.state = 99
                self.match(MOD_HTMLParser.CLOSE)
                pass

            elif la_ == 5:
                localctx = MOD_HTMLParser.Single_tagContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 100
                self.match(MOD_HTMLParser.OPEN)
                self.state = 101
                self.match(MOD_HTMLParser.SName)
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 103 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 102
                            self.match(MOD_HTMLParser.S)
                            self.state = 105 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==MOD_HTMLParser.S):
                                break

                        self.state = 107
                        self.attribute() 
                    self.state = 112
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

                self.state = 119
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
                if la_ == 1:
                    self.state = 114 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 113
                        self.match(MOD_HTMLParser.S)
                        self.state = 116 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==MOD_HTMLParser.S):
                            break

                    self.state = 118
                    self.match(MOD_HTMLParser.Name)


                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MOD_HTMLParser.S:
                    self.state = 121
                    self.match(MOD_HTMLParser.S)
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 127
                _la = self._input.LA(1)
                if not(_la==MOD_HTMLParser.CLOSE or _la==MOD_HTMLParser.SLASH_CLOSE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 6:
                localctx = MOD_HTMLParser.Single_slash_tagContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 128
                self.match(MOD_HTMLParser.OPEN)
                self.state = 129
                self.match(MOD_HTMLParser.Name)
                self.state = 138
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 131 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 130
                            self.match(MOD_HTMLParser.S)
                            self.state = 133 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==MOD_HTMLParser.S):
                                break

                        self.state = 135
                        self.attribute() 
                    self.state = 140
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MOD_HTMLParser.S:
                    self.state = 141
                    self.match(MOD_HTMLParser.S)
                    self.state = 146
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 147
                self.match(MOD_HTMLParser.SLASH_CLOSE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TAG_EQUALS(self):
            return self.getToken(MOD_HTMLParser.TAG_EQUALS, 0)

        def ATTVALUE_VALUE(self):
            return self.getToken(MOD_HTMLParser.ATTVALUE_VALUE, 0)

        def Name(self, i:int=None):
            if i is None:
                return self.getTokens(MOD_HTMLParser.Name)
            else:
                return self.getToken(MOD_HTMLParser.Name, i)

        def S(self, i:int=None):
            if i is None:
                return self.getTokens(MOD_HTMLParser.S)
            else:
                return self.getToken(MOD_HTMLParser.S, i)

        def getRuleIndex(self):
            return MOD_HTMLParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)




    def attribute(self):

        localctx = MOD_HTMLParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 150
                self.match(MOD_HTMLParser.Name)
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MOD_HTMLParser.S:
                    self.state = 151
                    self.match(MOD_HTMLParser.S)
                    self.state = 156
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 159 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MOD_HTMLParser.Name):
                    break

            self.state = 161
            self.match(MOD_HTMLParser.TAG_EQUALS)
            self.state = 162
            self.match(MOD_HTMLParser.ATTVALUE_VALUE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ChardataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(MOD_HTMLParser.TEXT, 0)

        def SP_TEXT(self):
            return self.getToken(MOD_HTMLParser.SP_TEXT, 0)

        def SEA_WS(self):
            return self.getToken(MOD_HTMLParser.SEA_WS, 0)

        def getRuleIndex(self):
            return MOD_HTMLParser.RULE_chardata

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChardata" ):
                listener.enterChardata(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChardata" ):
                listener.exitChardata(self)




    def chardata(self):

        localctx = MOD_HTMLParser.ChardataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_chardata)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MOD_HTMLParser.SP_TEXT) | (1 << MOD_HTMLParser.SEA_WS) | (1 << MOD_HTMLParser.TEXT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MiscContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(MOD_HTMLParser.COMMENT, 0)

        def SEA_WS(self):
            return self.getToken(MOD_HTMLParser.SEA_WS, 0)

        def getRuleIndex(self):
            return MOD_HTMLParser.RULE_misc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMisc" ):
                listener.enterMisc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMisc" ):
                listener.exitMisc(self)




    def misc(self):

        localctx = MOD_HTMLParser.MiscContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_misc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            _la = self._input.LA(1)
            if not(_la==MOD_HTMLParser.COMMENT or _la==MOD_HTMLParser.SEA_WS):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScriptletContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCRIPTLET(self):
            return self.getToken(MOD_HTMLParser.SCRIPTLET, 0)

        def getRuleIndex(self):
            return MOD_HTMLParser.RULE_scriptlet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScriptlet" ):
                listener.enterScriptlet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScriptlet" ):
                listener.exitScriptlet(self)




    def scriptlet(self):

        localctx = MOD_HTMLParser.ScriptletContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_scriptlet)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(MOD_HTMLParser.SCRIPTLET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Xml_decl_openContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def XML_DeclOpen(self):
            return self.getToken(MOD_HTMLParser.XML_DeclOpen, 0)

        def getRuleIndex(self):
            return MOD_HTMLParser.RULE_xml_decl_open

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXml_decl_open" ):
                listener.enterXml_decl_open(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXml_decl_open" ):
                listener.exitXml_decl_open(self)




    def xml_decl_open(self):

        localctx = MOD_HTMLParser.Xml_decl_openContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_xml_decl_open)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(MOD_HTMLParser.XML_DeclOpen)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





